test/errors/function_redeclaration.li
fn test() {
    return 1;
}

fn test() {
    return 2;
}
